# BrainBank

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MVP.md  PITCH.md  README.md  brainbank-backend.spec  main.py  package-lock.json  pyproject.toml  run.sh
backend/: api.py  api_graph.py  graph_visualization.py  schemas.py  server.py
backend/db/: kuzu.py  lance.py  manifest.py
backend/ingestion/: chunker.py  consolidator.py  journal_parser.py  processor.py
backend/retrieval/: artifacts.py  context.py  global_search.py  latent_discovery.py  local_search.py  provenance.py  query.py  routing.py  traversal.py  types.py
backend/sample_data/: college_math_notes.py  mock_demo.py
backend/scripts/: heal_graph.py  migrate_to_filesystem.py
backend/services/: clustering.py  embeddings.py  llm.py  llm_providers.py  notes_fs.py  notion.py  pdf.py  sync_agent.py
backend/session/: memory.py  prepared_query_store.py
brainbank/: api.py  embeddings.py  engine_setup.py  logic.py  processor.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: audit_knowledge_density.py  build_backend.sh  exorcise_ghosts.py  print_concept_graph.py  print_lancedb_chunks.py  purging_zombies.py  rebuild_graphrag_artifacts.py  reseed.ps1  reseed.sh  seed_college_math_notes.py  seed_mock_demo_data.py
tests/: conftest.py  test_api.py  test_api_graph.py  test_api_notion.py  test_api_upload.py  test_engine_setup.py  test_gitignore.py  test_graph_visualization.py  test_logic.py  test_processor.py
tmp/: kuzu.broken
(+109 files in other folders)
