[project]
name = "brainbank"
version = "0.1.0"
description = "Hybrid Vector/Graph RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "lancedb>=0.17.0",
    "kuzu>=0.8.0",
    "sentence-transformers>=3.0.0",
    "google-genai>=1.0.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
