[project]
name = "brainbank"
version = "0.1.0"
description = "Hybrid Vector/Graph RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "lancedb>=0.17.0",
    "kuzu>=0.8.0",
    "sentence-transformers>=3.0.0",
    "google-genai>=1.0.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.0.0",
    "networkx>=3.3",
    "notion-client>=3.0.0",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "igraph>=0.11.0",
    "leidenalg>=0.10.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
